--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
-<section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
-    <app-portafolio></app-portafolio>
+<section class="ae-container-fluid ae-container-fluid--inner rk-portfolio rk-main">
+    <router-outlet></router-outlet>
 </section>
 
 <app-footer></app-footer>
