--- a/src/app/pages/item/item.component.html
+++ b/src/app/pages/item/item.component.html
@@ -1,4 +1,4 @@
-
+<div class="animate__animated animate__fadeInDownBig">
     <header class="rk-portfolio-cover  item-inside-1">
         <div class="item-inside__meta">
             <h1 class="ae-u-bolder rk-portfolio-title ">Essential Stationery</h1>
@@ -85,3 +85,4 @@
                     <svg>
                         <use xlink:href="assets/img/symbols.svg#arrow"></use>
                     </svg></span></a></div>
+</div>
