--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -1,4 +1,4 @@
-<div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+<div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4 animate__animated animate__fadeInDownBig">
     <a routerLink="/item"
         class="rk-item ae-masonry__item"><img src="assets/img/project-1.jpg" alt="">
         <div class="item-meta">
